# deeparch-math-game

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.sh
.claude/skills/install/: SKILL.md
.claude/skills/startup/: SKILL.md
backend/: api.py  cosmetics.py  db.py  main.py  models.py  static_no_cache.py
docs/superpowers/plans/: 2026-04-29-game-platform-and-furnace-merge.md  2026-04-30-avatar-cosmetics.md  2026-04-30-chai-kuang-decompose-game.md  2026-04-30-girly-avatar-frame.md
docs/superpowers/specs/: 2026-04-29-game-platform-and-furnace-merge-design.md  2026-04-30-avatar-cosmetics-design.md  2026-04-30-chai-kuang-decompose-game-design.md  2026-04-30-girly-avatar-frame-design.md
frontend/: dashboard.html  index.html
frontend/css/: avatar.css  dashboard.css  drag.css  pixel.css  platform.css
frontend/games/chai-kuang/: chai-kuang.css  game.js
frontend/games/cou-shi/: cou-shi.css  game.js
frontend/js/: api.js  audio.js  badges.js  dashboard.js  drag.js  game.js  games-manifest.js  platform.js  render.js
frontend/js/avatar/: avatar.js  catalog.js  home-tile.js  shop.js
tests/: conftest.py  test_api.py  test_cosmetics.py  test_decompose_api.py
