[project]
name = "math-adventure"
version = "0.1.0"
description = "Minecraft-style math game for first graders"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
